# mnfs

./: CMakeLists.txt  README.md
cmake/: mnfs-config.cmake.in  utils.cmake
examples/: CMakeLists.txt
examples/gradient/: CMakeLists.txt  main.cpp
examples/newton/: CMakeLists.txt  main.cpp
include/: mnfs.hpp
include/mnfs/: derivative.h  export.h  mylib.h
src/: derivative.cpp  line_search.cpp  mnfs_common.hpp  mylib.cpp  seeding.cpp
tests/: CMakeLists.txt  add_test.cpp
